--- a/linear-regression/BasicTheory.ipynb
+++ b/linear-regression/BasicTheory.ipynb
@@ -195,6 +195,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1448b48b023bcc9c3d4a79e814720a10ca6d4244f75e0f7ce4af58f96ba2b7d3"
+   }
   }
  },
  "nbformat": 4,
