VS Code markdown preview is working fine

--- a/linear-regression/BasicTheory.ipynb
+++ b/linear-regression/BasicTheory.ipynb
@@ -57,7 +57,8 @@
     "\n",
     "In machine learning an iterative gradient descent algorithm is used to minimize the cost function.\n",
     "The partial derivatives \n",
-    "$$ \\frac{\\partial J(w)}{\\partial w_0},\\frac{\\partial J(w)}{\\partial w_1},...\\frac{\\partial J(w)}{\\partial w_m} $$ are considered as gradients and updated in each iteration using the algorithm\n",
+    "$$\\frac{\\partial J(w)}{\\partial w_0},\\frac{\\partial J(w)}{\\partial w_1},...\\frac{\\partial J(w)}{\\partial w_m} $$ \n",
+    "are considered as gradients and updated in each iteration using the algorithm\n",
     "$$Repeat \\ until \\ convergence\n",
     "\\left\\{\\begin{matrix}\n",
     "w_j := \\alpha_j - lr \\times \\frac{\\partial J(w)}{\\partial w_j}\n",
