Learn atleast the mentioned models and basics of Machine Learning for numerical data

--- a/linear-regression/BasicTheory.ipynb
+++ b/linear-regression/BasicTheory.ipynb
@@ -40,9 +40,9 @@
     "$$  MSE = \\sum_{i=1}^{n}(y_i-h_i)^2 $$\n",
     "\n",
     "In linear regression optimization goal is to find best coefficients of regression so that this error is minimum. Best values are obtained in an iterative process and this error function determines the computional cost of the overall process. Thus error function is also called cost function which is expressed as \n",
-    "$$ J(w) = \\frac{1}{2n}\\sum_{i=1}^{n}(y_i-h_1)^2 $$\n",
+    "$$ J(w) = \\frac{1}{2n}\\sum_{i=1}^{n}(y_i-h_i)^2 $$\n",
     "And optimization or learning objective is \n",
-    "$$ minimize \\ J(w) = minimize \\ \\frac{1}{2n}\\sum_{i=1}^{n}(y_i-h_1)^2 $$"
+    "$$ minimize \\ J(w) = minimize \\ \\frac{1}{2n}\\sum_{i=1}^{n}(y_i-h_i)^2 $$"
    ]
   },
   {
@@ -68,10 +68,24 @@
     " $$\n",
     "Here $ lr = learning \\ rate $. For example coeffiecients $ w_0,w_1 $ will be updated in each iteration as \n",
     "$$ temp0 = w_0 - lr \\times \\frac{\\partial J(w)}{\\partial w_0} \\\\\n",
+    "\n",
     "temp1= w_1 - lr \\times \\frac{\\partial J(w)}{\\partial w_1} \\\\\n",
+    "\n",
     "w_0 = temp0 \\\\\n",
+    "\n",
     "w_1 = temp1\n",
     "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6054345",
+   "metadata": {},
+   "source": [
+    "### Prediction\n",
+    "Once the coefficients with minimum error are found, then these coefficients are used to predict $ \\hat{y}_i $ as future value of  $ x_i $.\n",
+    "\n",
+    "So $ \\hat{y}_i $ is the predicted output."
    ]
   },
   {
@@ -162,7 +176,7 @@
    "id": "f85f5663-9d5d-4cf1-bc7d-fdde60611cf7",
    "metadata": {},
    "source": [
-    "## Normal Equation\n",
+    "### Normal Equation\n",
     "Normal equation is another way to find optimal coefficients of regression without using gradient descent algorithm.\n",
     "Using normal eqation the optimal coefficient is given by \n",
     "$$ W = (X^T X)^{-1}X^Ty $$\n",
@@ -172,10 +186,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a27f385",
+   "metadata": {},
+   "source": [
+    "Gradient descent | Normal Equation\n",
+    "-----------------|-----------------\n",
+    "Need to choose $ \\alpha $ value. | No need to choose $ \\alpha $\n",
+    "Involves iteration | No iteration is required.\n",
+    "$ O(Kn^2) $ | $ O(n^3), need to calculate invers of X^TX $\n",
+    "Works well when n is large. | When n is large, processing becomes slow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f8381890-89f4-401a-bfb2-4a3714ecc0c9",
    "metadata": {},
    "source": [
-    "# Measures to judge a linear regression model"
+    "### Measures to judge a linear regression model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b62d1065",
+   "metadata": {},
+   "source": [
+    "### R Square \n",
+    "R squared value is a statistical measure of how close the data are to the fitted regression line. Also known as coefficient of determination.\n",
+    "\n",
+    "$$ R^2 = 1 - \\frac{\\sum(y_i -\\hat{y}_i)^2 }{\\sum(y_i -\\bar{y})^2} $$\n",
+    "\n",
+    "\n",
+    "- The difference between actual $ y_i $ and predicted $ \\hat{y}_i $ are called residuals.\n",
+    "- Usually, $ 0 \\leq R^2 \\leq 1 $\n",
+    "- Usually, the larger the R2, the better the regression model.\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Limitations of $ R^2 $\n",
+    "- We cannot use R-squared to determine whether the coefficient estimates and predictions are biased, which is why you must assess the residual plots.\n",
+    "-  it does not take into consideration of overfitting problem.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e35ba15",
+   "metadata": {},
+   "source": [
+    "#### Adjusted $ R^2 $\n",
+    "\n",
+    "![](AdjustedRSquare.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33a831c1",
+   "metadata": {},
+   "source": [
+    "### MSE: Mean Square Error\n",
+    "$$  MSE = \\sum_{i=1}^{n}(y_i-\\hat{y}_i)^2 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd3ef193",
+   "metadata": {},
+   "source": [
+    "### MAE:Mean Absolute error\n",
+    "$$  MSE = \\sum_{i=1}^{n}|y_i-\\hat{y}_i|^2 $$"
    ]
   }
  ],
