LR error updated

--- a/linear-regression/BasicTheory.ipynb
+++ b/linear-regression/BasicTheory.ipynb
@@ -61,17 +61,29 @@
     "are considered as gradients and updated in each iteration using the algorithm\n",
     "$$Repeat \\ until \\ convergence\n",
     "\\left\\{\\begin{matrix}\n",
-    "w_j := \\alpha_j - lr \\times \\frac{\\partial J(w)}{\\partial w_j}\n",
+    "w_j := w_j - lr \\times \\frac{\\partial J(w)}{\\partial w_j}\n",
     "\\end{matrix}\\right.\n",
     "\\\\\n",
     "for \\ j=0,1,2,3,...,m\n",
     " $$\n",
-    "Here $ lr = learning \\ rate $. For example coeffiecients $ w_0,w_1 $ will be updated in each iteration as \n",
-    "$$ temp0 = w_0 - lr \\times \\frac{\\partial J(w)}{\\partial w_0} \\\\\n",
-    "temp1= w_1 - lr \\times \\frac{\\partial J(w)}{\\partial w_1} \\\\\n",
+    "Here $ lr = learning \\ rate $. \n",
+    "\n",
+    "But, when implemented in programming, then $ w_j $ will be updated in each iteration as \n",
+    "$$ Repeat \\ until \\ convergence\n",
+    "\\left\\{\\begin{matrix}\n",
+    "w_j := w_j - lr \\times \\frac{1}{n} \\sum_{i=1}^{n} (h_i - y_i)^2 x_{j,i}\n",
+    "\\end{matrix}\\right.\n",
+    "$$\n",
+    "\n",
+    "For example $ w_0, w_1 $ will be updated in each iteration as\n",
+    "$$\n",
+    "temp0= w_0 - lr \\times \\frac{1}{n} \\sum_{i=1}^{n} (h_i - y_i)^2 x_{0,i}\\\\\n",
+    "Or, temp0= w_0 - lr \\times \\frac{1}{n} \\sum_{i=1}^{n} (h_i - y_i)^2, as \\ x_{0,i}= 1\\\\\n",
+    "And, temp1= w_1 - lr \\times \\frac{1}{n} \\sum_{i=1}^{n} (h_i - y_i)^2 x_{1,i} \\\\\n",
     "w_0 = temp0 \\\\\n",
     "w_1 = temp1\n",
-    "$$\n"
+    "$$\n",
+    "\n"
    ]
   },
   {
