--- a/linear-regression/BasicTheory.ipynb
+++ b/linear-regression/BasicTheory.ipynb
@@ -78,8 +78,15 @@
     "For example $ w_0, w_1 $ will be updated in each iteration as\n",
     "$$\n",
     "temp0= w_0 - lr \\times \\frac{1}{n} \\sum_{i=1}^{n} (h_i - y_i)^2 x_{0,i}\n",
-    "\\\\ Or, temp0= w_0 - lr \\times \\frac{1}{n} \\sum_{i=1}^{n} (h_i - y_i)^2, as \\ x_{0,i}= 1\n",
-    "\\\\ And, temp1= w_1 - lr \\times \\frac{1}{n} \\sum_{i=1}^{n} (h_i - y_i)^2 x_{1,i} \n",
+    "$$\n",
+    "\n",
+    "$$ Or, temp0= w_0 - lr \\times \\frac{1}{n} \\sum_{i=1}^{n} (h_i - y_i)^2, as \\ x_{0,i}= 1\n",
+    "$$\n",
+    "\n",
+    "And,\n",
+    "$$ temp1= w_1 - lr \\times \\frac{1}{n} \\sum_{i=1}^{n} (h_i - y_i)^2 x_{1,i} $$\n",
+    "\n",
+    "$$\n",
     "\\\\ w_0 = temp0 \\\\ w_1 = temp1\n",
     "$$\n",
     "\n"
