--- a/linear-regression/BasicTheory.ipynb
+++ b/linear-regression/BasicTheory.ipynb
@@ -29,6 +29,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3c82f76",
+   "metadata": {},
+   "source": [
+    "### Notes:\n",
+    "- $ m = $ total no. of features. And $ j $ is used to iterate for features. $ j = 0,1,2,.....,m $ \n",
+    "- The $ 0^{th} $ features is just an added feature with all values = 1, it is also called a bias.\n",
+    "- $ n = $ total no. of data points. And $ i $ is used to iterate for data points. $ i = 1,2,3,4......,n $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "41d3ca56-1d46-436b-9ffa-e7e40e92f33d",
    "metadata": {},
    "source": [
