#Code structure worked well, some point differences.

--- a/linear-regression/BasicTheory.ipynb
+++ b/linear-regression/BasicTheory.ipynb
@@ -49,12 +49,12 @@
     "$$ error = (y_i - h_i) $$ \n",
     "And for all instances total error is given by mean square error (MSE)\n",
     "\n",
-    "$$  MSE = \\frac{1}{n}\\sum_{i=1}^{n}(y_i-h_i)^2 $$\n",
+    "$$  MSE = \\frac{1}{n}\\sum_{i=1}^{n}(h_i-y_i)^2 $$\n",
     "\n",
     "In linear regression, optimization goal is to find best coefficients of regression so that this error is minimum. Best values are obtained in an iterative process and this error function determines the computional cost of the overall process. Thus error function is also called cost function/loss function which is expressed as \n",
-    "$$ J(w) = \\frac{1}{n}\\sum_{i=1}^{n}(y_i-h_i)^2 $$\n",
+    "$$ J(w) = \\frac{1}{n}\\sum_{i=1}^{n}(h_i-y_i)^2 $$\n",
     "And optimization or learning objective is \n",
-    "$$ minimize \\ J(w) = minimize \\ \\frac{1}{n}\\sum_{i=1}^{n}(y_i-h_i)^2 $$"
+    "$$ minimize \\ J(w) = minimize \\ \\frac{1}{n}\\sum_{i=1}^{n}(h_i-y_i)^2 $$"
    ]
   },
   {
@@ -84,20 +84,20 @@
     "But, when implemented in programming, then $ w_j $ will be updated in each iteration as \n",
     "$$ Repeat \\ until \\ convergence\n",
     "\\left\\{\\begin{matrix}\n",
-    "w_j := w_j - lr \\times \\frac{2}{n} \\sum_{i=1}^{n} (y_i - h_i) (-x_{j,i})\n",
+    "w_j := w_j - lr \\times \\frac{2}{n} \\sum_{i=1}^{n} (h_i - y_i) (x_{j,i})\n",
     "\\end{matrix}\\right.\n",
     "$$\n",
     "\n",
     "For example $ w_0, w_1 $ will be updated in each iteration as\n",
     "$$\n",
-    "temp0= w_0 - lr \\times \\frac{-2}{n} \\sum_{i=1}^{n} (y_i - h_i) x_{0,i}\n",
+    "temp0= w_0 - lr \\times \\frac{2}{n} \\sum_{i=1}^{n} (h_i - y_i) x_{0,i}\n",
     "$$\n",
     "\n",
-    "$$ Or, temp0= w_0 - lr \\times \\frac{-2}{n} \\sum_{i=1}^{n} (y_i - h_i), as \\ x_{0,i}= 1\n",
+    "$$ Or, temp0= w_0 - lr \\times \\frac{2}{n} \\sum_{i=1}^{n} (h_i - y_i), as \\ x_{0,i}= 1\n",
     "$$\n",
     "\n",
     "And,\n",
-    "$$ temp1= w_1 - lr \\times \\frac{-2}{n} \\sum_{i=1}^{n} (y_i - h_i) x_{1,i} $$\n",
+    "$$ temp1= w_1 - lr \\times \\frac{2}{n} \\sum_{i=1}^{n} (h_i - y_i) x_{1,i} $$\n",
     "\n",
     "$$\n",
     "\\\\ w_0 = temp0 \\\\ w_1 = temp1\n",
